--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "prepare": "is-ci || husky install"
   },
   "dependencies": {
     "next": "12.1.6",
@@ -20,6 +21,9 @@
     "autoprefixer": "^10.4.7",
     "eslint": "8.16.0",
     "eslint-config-next": "12.1.6",
+    "gitmoji-cli": "^5.0.0",
+    "husky": "^8.0.1",
+    "is-ci": "^3.0.1",
     "postcss": "^8.4.14",
     "tailwindcss": "^3.0.24",
     "typescript": "4.7.2"
