--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "format": "prettier --write \"{pages,components}/**/*.{ts,tsx}\"",
     "prepare": "is-ci || husky install"
   },
   "dependencies": {
@@ -21,10 +22,13 @@
     "autoprefixer": "^10.4.7",
     "eslint": "8.16.0",
     "eslint-config-next": "12.1.6",
+    "eslint-config-prettier": "^8.5.0",
     "gitmoji-cli": "^5.0.0",
     "husky": "^8.0.1",
     "is-ci": "^3.0.1",
+    "lint-staged": "^12.4.2",
     "postcss": "^8.4.14",
+    "prettier": "^2.6.2",
     "tailwindcss": "^3.0.24",
     "typescript": "4.7.2"
   }
