--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "dev:watch": "next-remote-watch ./content",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -11,25 +12,49 @@
     "prepare": "is-ci || husky install"
   },
   "dependencies": {
+    "framer-motion": "^6.3.10",
+    "mdx-bundler": "^9.0.1",
     "next": "12.1.6",
+    "next-remote-watch": "^1.0.0",
     "react": "18.1.0",
     "react-dom": "18.1.0"
   },
   "devDependencies": {
-    "@types/node": "17.0.35",
-    "@types/react": "18.0.9",
+    "@plaiceholder/next": "^2.3.0",
+    "@types/glob": "^7.2.0",
+    "@types/node": "17.0.40",
+    "@types/react": "18.0.12",
     "@types/react-dom": "18.0.5",
     "autoprefixer": "^10.4.7",
-    "eslint": "8.16.0",
+    "crypto": "^1.0.1",
+    "esbuild": "^0.14.42",
+    "eslint": "8.17.0",
     "eslint-config-next": "12.1.6",
     "eslint-config-prettier": "^8.5.0",
     "gitmoji-cli": "^5.0.0",
+    "glob": "^8.0.3",
+    "gray-matter": "^4.0.3",
     "husky": "^8.0.1",
+    "image-size": "^1.0.1",
     "is-ci": "^3.0.1",
-    "lint-staged": "^12.4.2",
+    "lint-staged": "^13.0.0",
+    "plaiceholder": "./packages-cache/plaiceholder-2.3.0.tgz",
     "postcss": "^8.4.14",
     "prettier": "^2.6.2",
+    "rehype-img-size": "^1.0.1",
+    "remark": "^14.0.2",
+    "remark-cli": "^10.0.1",
+    "remark-frontmatter": "^4.0.1",
+    "remark-gfm": "^3.0.1",
+    "remark-mdx": "^2.1.1",
+    "remark-mdx-images": "^1.0.3",
+    "remark-preset-lint-consistent": "^5.1.1",
+    "remark-preset-lint-markdown-style-guide": "^5.1.2",
+    "remark-preset-lint-recommended": "^6.1.2",
+    "remark-preset-prettier": "^1.0.0",
+    "sharp": "^0.30.6",
     "tailwindcss": "^3.0.24",
-    "typescript": "4.7.2"
+    "typescript": "4.7.3",
+    "unist-util-visit": "^4.1.0"
   }
 }
