:construction: change directory structure, remove some devdependencies

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "dev:watch": "next-remote-watch ./content",
+    "dev:watch": "next-remote-watch ./_content",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -20,13 +20,11 @@
     "react-dom": "18.1.0"
   },
   "devDependencies": {
-    "@plaiceholder/next": "^2.3.0",
     "@types/glob": "^7.2.0",
     "@types/node": "17.0.40",
     "@types/react": "18.0.12",
     "@types/react-dom": "18.0.5",
     "autoprefixer": "^10.4.7",
-    "crypto": "^1.0.1",
     "esbuild": "^0.14.42",
     "eslint": "8.17.0",
     "eslint-config-next": "12.1.6",
@@ -35,13 +33,11 @@
     "glob": "^8.0.3",
     "gray-matter": "^4.0.3",
     "husky": "^8.0.1",
-    "image-size": "^1.0.1",
     "is-ci": "^3.0.1",
     "lint-staged": "^13.0.0",
-    "plaiceholder": "./packages-cache/plaiceholder-2.3.0.tgz",
+    "plaiceholder": "file:./lib/packages/plaiceholder-2.3.0.tgz",
     "postcss": "^8.4.14",
     "prettier": "^2.6.2",
-    "rehype-img-size": "^1.0.1",
     "remark": "^14.0.2",
     "remark-cli": "^10.0.1",
     "remark-frontmatter": "^4.0.1",
