--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,8 +19,8 @@
     "next-env.d.ts",
     "**/*.ts",
     "**/*.tsx",
-    "content/posts/button.jsx",
-    "content/posts/button.jsx"
+    "_content/posts/button.jsx",
+    "_content/posts/button.jsx"
   ],
   "exclude": ["node_modules"]
 }
