:sparkles: finish remark setup

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,5 +1,5 @@
 {
-  "extends": ["next/core-web-vitals", "prettier"],
+  "extends": ["next/core-web-vitals", "plugin:mdx/recommended", "prettier"],
   "settings": {
     "mdx/code-blocks": true,
     // optional, if you want to disable language mapper, set it to `false`
