--- a/package.json
+++ b/package.json
@@ -8,18 +8,21 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "format": "prettier --write \"{pages,components}/**/*.{ts,tsx}\"",
+    "format": "prettier --write \"{pages,components,_content}/**/*.{json,js,jsx,ts,tsx,md,mdx}\"",
     "prepare": "is-ci || husky install"
   },
   "dependencies": {
     "framer-motion": "^6.3.10",
+    "highlight.js": "^11.5.1",
     "mdx-bundler": "^9.0.1",
+    "medium-zoom": "^1.0.6",
     "next": "12.1.6",
     "next-remote-watch": "^1.0.0",
     "react": "18.1.0",
     "react-dom": "18.1.0"
   },
   "devDependencies": {
+    "@csstools/postcss-sass": "^5.0.1",
     "@types/glob": "^7.2.0",
     "@types/node": "17.0.40",
     "@types/react": "18.0.12",
@@ -29,6 +32,7 @@
     "eslint": "8.17.0",
     "eslint-config-next": "12.1.6",
     "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-mdx": "^1.17.0",
     "gitmoji-cli": "^5.0.0",
     "glob": "^8.0.3",
     "gray-matter": "^4.0.3",
@@ -37,17 +41,12 @@
     "lint-staged": "^13.0.0",
     "plaiceholder": "file:./lib/packages/plaiceholder-2.3.0.tgz",
     "postcss": "^8.4.14",
+    "postcss-import": "^14.1.0",
     "prettier": "^2.6.2",
-    "remark": "^14.0.2",
-    "remark-cli": "^10.0.1",
-    "remark-frontmatter": "^4.0.1",
+    "rehype-highlight": "^5.0.2",
+    "rehype-slug": "^5.0.1",
     "remark-gfm": "^3.0.1",
-    "remark-mdx": "^2.1.1",
-    "remark-mdx-images": "^1.0.3",
-    "remark-preset-lint-consistent": "^5.1.1",
-    "remark-preset-lint-markdown-style-guide": "^5.1.2",
-    "remark-preset-lint-recommended": "^6.1.2",
-    "remark-preset-prettier": "^1.0.0",
+    "remark-heading-id": "^1.0.0",
     "sharp": "^0.30.6",
     "tailwindcss": "^3.0.24",
     "typescript": "4.7.3",
