--- a/package.json
+++ b/package.json
@@ -12,44 +12,45 @@
     "prepare": "is-ci || husky install"
   },
   "dependencies": {
-    "framer-motion": "^6.3.10",
-    "highlight.js": "^11.5.1",
+    "framer-motion": "^7.2.0",
+    "highlight.js": "^11.6.0",
     "mdx-bundler": "^9.0.1",
     "medium-zoom": "^1.0.6",
-    "next": "12.1.6",
+    "next": "12.2.5",
     "next-remote-watch": "^1.0.0",
-    "react": "18.1.0",
-    "react-dom": "18.1.0"
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
     "@csstools/postcss-sass": "^5.0.1",
     "@types/glob": "^7.2.0",
-    "@types/node": "17.0.40",
-    "@types/react": "18.0.12",
-    "@types/react-dom": "18.0.5",
-    "autoprefixer": "^10.4.7",
-    "esbuild": "^0.14.42",
-    "eslint": "8.17.0",
-    "eslint-config-next": "12.1.6",
+    "@types/node": "18.7.6",
+    "@types/react": "18.0.17",
+    "@types/react-dom": "18.0.6",
+    "@types/sharp": "^0.30.5",
+    "autoprefixer": "^10.4.8",
+    "esbuild": "^0.15.5",
+    "eslint": "8.22.0",
+    "eslint-config-next": "12.2.5",
     "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-mdx": "^1.17.0",
-    "gitmoji-cli": "^5.0.0",
+    "eslint-plugin-mdx": "^2.0.2",
+    "gitmoji-cli": "^5.3.0",
     "glob": "^8.0.3",
     "gray-matter": "^4.0.3",
     "husky": "^8.0.1",
+    "image-size": "^1.0.2",
     "is-ci": "^3.0.1",
-    "lint-staged": "^13.0.0",
-    "plaiceholder": "file:./lib/packages/plaiceholder-2.3.0.tgz",
-    "postcss": "^8.4.14",
+    "lint-staged": "^13.0.3",
+    "postcss": "^8.4.16",
     "postcss-import": "^14.1.0",
-    "prettier": "^2.6.2",
+    "prettier": "^2.7.1",
     "rehype-highlight": "^5.0.2",
     "rehype-slug": "^5.0.1",
     "remark-gfm": "^3.0.1",
     "remark-heading-id": "^1.0.0",
-    "sharp": "^0.30.6",
-    "tailwindcss": "^3.0.24",
-    "typescript": "4.7.3",
+    "sharp": "^0.30.7",
+    "tailwindcss": "^3.1.8",
+    "typescript": "4.7.4",
     "unist-util-visit": "^4.1.0"
   }
 }
