--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "dev:watch": "next-remote-watch ./_content",
+    "dev": "next-remote-watch ./_content",
+    "dev:origin": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -12,10 +12,10 @@
     "prepare": "is-ci || husky install"
   },
   "dependencies": {
-    "framer-motion": "^7.2.0",
+    "esbuild": "^0.15.5",
+    "framer-motion": "^7.2.1",
     "highlight.js": "^11.6.0",
     "mdx-bundler": "^9.0.1",
-    "medium-zoom": "^1.0.6",
     "next": "12.2.5",
     "next-remote-watch": "^1.0.0",
     "react": "18.2.0",
@@ -24,17 +24,16 @@
   "devDependencies": {
     "@csstools/postcss-sass": "^5.0.1",
     "@types/glob": "^7.2.0",
-    "@types/node": "18.7.6",
+    "@types/node": "18.7.13",
     "@types/react": "18.0.17",
     "@types/react-dom": "18.0.6",
     "@types/sharp": "^0.30.5",
     "autoprefixer": "^10.4.8",
-    "esbuild": "^0.15.5",
     "eslint": "8.22.0",
     "eslint-config-next": "12.2.5",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-mdx": "^2.0.2",
-    "gitmoji-cli": "^5.3.0",
+    "gitmoji-cli": "^6.1.0",
     "glob": "^8.0.3",
     "gray-matter": "^4.0.3",
     "husky": "^8.0.1",
@@ -51,6 +50,6 @@
     "sharp": "^0.30.7",
     "tailwindcss": "^3.1.8",
     "typescript": "4.7.4",
-    "unist-util-visit": "^4.1.0"
+    "unist-util-visit": "^4.1.1"
   }
 }
