--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
     "prepare": "is-ci || husky install"
   },
   "dependencies": {
+    "@code-hike/mdx": "^0.7.4",
     "esbuild": "^0.15.5",
     "framer-motion": "^7.2.1",
-    "highlight.js": "^11.6.0",
     "mdx-bundler": "^9.0.1",
     "next": "12.2.5",
     "next-remote-watch": "^1.0.0",
@@ -45,10 +45,9 @@
     "postcss": "^8.4.16",
     "postcss-import": "^14.1.0",
     "prettier": "^2.7.1",
-    "rehype-highlight": "^5.0.2",
+    "rehype-autolink-headings": "^6.1.1",
     "rehype-slug": "^5.0.1",
     "remark-gfm": "^3.0.1",
-    "remark-heading-id": "^1.0.0",
     "sharp": "^0.30.7",
     "tailwindcss": "^3.1.8",
     "typescript": "4.7.4",
