--- a/package.json
+++ b/package.json
@@ -18,11 +18,12 @@
     "mdx-bundler": "^9.0.1",
     "next": "12.2.5",
     "next-remote-watch": "^1.0.0",
+    "next-themes": "^0.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
   "devDependencies": {
-    "@csstools/postcss-sass": "^5.0.1",
+    "@fec/remark-a11y-emoji": "^3.1.0",
     "@microflash/remark-figure-caption": "^1.0.0",
     "@tailwindcss/typography": "^0.5.4",
     "@types/glob": "^7.2.0",
@@ -46,9 +47,11 @@
     "postcss": "^8.4.16",
     "postcss-import": "^14.1.0",
     "prettier": "^2.7.1",
+    "rehype-accessible-emojis": "^0.3.2",
     "rehype-autolink-headings": "^6.1.1",
     "rehype-slug": "^5.0.1",
     "remark-gfm": "^3.0.1",
+    "sass": "^1.54.5",
     "sharp": "^0.30.7",
     "tailwindcss": "^3.1.8",
     "typescript": "4.7.4",
