--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "devDependencies": {
     "@fec/remark-a11y-emoji": "^3.1.0",
     "@microflash/remark-figure-caption": "^1.0.0",
+    "@svgr/webpack": "^6.3.1",
     "@tailwindcss/typography": "^0.5.4",
     "@types/glob": "^7.2.0",
     "@types/node": "18.7.13",
