--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@fec/remark-a11y-emoji": "^3.1.0",
     "@microflash/remark-figure-caption": "^1.0.0",
     "@svgr/webpack": "^6.3.1",
+    "@tailwindcss/aspect-ratio": "^0.4.0",
     "@tailwindcss/typography": "^0.5.4",
     "@types/glob": "^7.2.0",
     "@types/node": "18.7.13",
