:heavy_plus_sign: using plaiceholder for img placeholder

--- a/package.json
+++ b/package.json
@@ -42,10 +42,10 @@
     "glob": "^8.0.3",
     "gray-matter": "^4.0.3",
     "husky": "^8.0.1",
-    "image-size": "^1.0.2",
     "is-ci": "^3.0.1",
     "lint-staged": "^13.0.3",
     "mdast-util-mdx": "^2.0.0",
+    "plaiceholder": "^2.5.0",
     "postcss": "^8.4.16",
     "postcss-import": "^14.1.0",
     "prettier": "^2.7.1",
