--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@code-hike/mdx": "^0.7.4",
+    "classnames": "^2.3.2",
     "esbuild": "^0.15.7",
     "framer-motion": "^7.3.5",
     "mdx-bundler": "^9.0.1",
