--- a/.prettierrc
+++ b/.prettierrc
@@ -1,7 +1,7 @@
 {
   "printWidth": 80,
   "singleQuote": false,
-  "trailingComma": "es5",
+  "trailingComma": "all",
   "tabWidth": 2,
   "arrowParens": "avoid"
 }
