:bug: fix iOS’s bug with 100vh

--- a/package.json
+++ b/package.json
@@ -49,8 +49,8 @@
     "mdast-util-mdx": "^2.0.0",
     "plaiceholder": "^2.5.0",
     "postcss": "^8.4.16",
-    "postcss-100vh-fix": "^1.0.2",
     "postcss-import": "^15.0.0",
+    "postcss-viewport-height-correction": "^1.1.1",
     "prettier": "^2.7.1",
     "rehype-accessible-emojis": "^0.3.2",
     "rehype-autolink-headings": "^6.1.1",
