--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "classnames": "^2.3.2",
     "esbuild": "^0.15.7",
     "framer-motion": "^7.3.5",
+    "kbar": "^0.1.0-beta.36",
     "mdx-bundler": "^9.0.1",
     "next": "12.3.0",
     "next-remote-watch": "^1.0.0",
