--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
     "next": "12.3.0",
     "next-remote-watch": "^1.0.0",
     "next-themes": "^0.2.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-icons": "^4.4.0"
   },
   "devDependencies": {
@@ -51,7 +51,6 @@
     "plaiceholder": "^2.5.0",
     "postcss": "^8.4.16",
     "postcss-import": "^15.0.0",
-    "postcss-viewport-height-correction": "^1.1.1",
     "prettier": "^2.7.1",
     "rehype-accessible-emojis": "^0.3.2",
     "rehype-autolink-headings": "^6.1.1",
