--- a/package.json
+++ b/package.json
@@ -14,12 +14,12 @@
   "dependencies": {
     "@code-hike/mdx": "^0.7.4",
     "classnames": "^2.3.2",
-    "esbuild": "^0.15.7",
-    "framer-motion": "^7.3.5",
+    "esbuild": "^0.15.10",
+    "framer-motion": "^7.5.1",
     "kbar": "^0.1.0-beta.36",
     "mdx-bundler": "^9.0.1",
-    "next": "12.3.0",
-    "next-remote-watch": "^1.0.0",
+    "next": "12.3.1",
+    "next-remote-watch": "^2.0.0",
     "next-themes": "^0.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -28,20 +28,21 @@
   "devDependencies": {
     "@fec/remark-a11y-emoji": "^3.1.0",
     "@microflash/remark-figure-caption": "^1.0.0",
-    "@svgr/webpack": "^6.3.1",
+    "@plaiceholder/next": "^2.5.0",
+    "@svgr/webpack": "^6.4.0",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/typography": "^0.5.7",
     "@types/glob": "^8.0.0",
-    "@types/node": "18.7.18",
-    "@types/react": "18.0.20",
+    "@types/node": "18.7.23",
+    "@types/react": "18.0.21",
     "@types/react-dom": "18.0.6",
     "@types/sharp": "^0.31.0",
-    "autoprefixer": "^10.4.11",
-    "eslint": "8.23.1",
-    "eslint-config-next": "12.3.0",
+    "autoprefixer": "^10.4.12",
+    "eslint": "8.24.0",
+    "eslint-config-next": "12.3.1",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-mdx": "^2.0.5",
-    "gitmoji-cli": "^6.2.0",
+    "gitmoji-cli": "^7.0.1",
     "glob": "^8.0.3",
     "gray-matter": "^4.0.3",
     "husky": "^8.0.1",
@@ -49,7 +50,7 @@
     "lint-staged": "^13.0.3",
     "mdast-util-mdx": "^2.0.0",
     "plaiceholder": "^2.5.0",
-    "postcss": "^8.4.16",
+    "postcss": "^8.4.17",
     "postcss-100vh-fix": "^1.0.2",
     "postcss-import": "^15.0.0",
     "prettier": "^2.7.1",
@@ -57,10 +58,10 @@
     "rehype-autolink-headings": "^6.1.1",
     "rehype-slug": "^5.0.1",
     "remark-gfm": "^3.0.1",
-    "sass": "^1.54.9",
-    "sharp": "^0.31.0",
+    "sass": "^1.55.0",
+    "sharp": "^0.31.1",
     "tailwindcss": "^3.1.8",
-    "typescript": "4.8.3",
+    "typescript": "4.8.4",
     "unist-util-visit": "^4.1.1"
   }
 }
