--- a/package.json
+++ b/package.json
@@ -45,13 +45,16 @@
     "gitmoji-cli": "^7.0.1",
     "glob": "^8.0.3",
     "gray-matter": "^4.0.3",
+    "hast": "^1.0.0",
+    "hast-util-has-property": "^2.0.0",
+    "hast-util-heading-rank": "^2.1.0",
+    "hast-util-to-string": "^2.0.0",
     "husky": "^8.0.1",
     "is-ci": "^3.0.1",
     "lint-staged": "^13.0.3",
     "mdast-util-mdx": "^2.0.0",
     "plaiceholder": "^2.5.0",
     "postcss": "^8.4.17",
-    "postcss-100vh-fix": "^1.0.2",
     "postcss-import": "^15.0.0",
     "prettier": "^2.7.1",
     "rehype-accessible-emojis": "^0.3.2",
@@ -62,6 +65,7 @@
     "sharp": "^0.31.1",
     "tailwindcss": "^3.1.8",
     "typescript": "4.8.4",
+    "unified": "^10.1.2",
     "unist-util-visit": "^4.1.1"
   }
 }
