--- a/package.json
+++ b/package.json
@@ -13,13 +13,13 @@
   },
   "dependencies": {
     "@code-hike/mdx": "^0.7.4",
+    "@vercel/og": "^0.0.19",
     "classnames": "^2.3.2",
     "esbuild": "^0.15.10",
     "framer-motion": "^7.5.1",
     "kbar": "^0.1.0-beta.36",
     "mdx-bundler": "^9.0.1",
     "next": "12.3.1",
-    "next-remote-watch": "^2.0.0",
     "next-themes": "^0.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -53,6 +53,7 @@
     "is-ci": "^3.0.1",
     "lint-staged": "^13.0.3",
     "mdast-util-mdx": "^2.0.0",
+    "next-remote-watch": "^2.0.0",
     "plaiceholder": "^2.5.0",
     "postcss": "^8.4.17",
     "postcss-import": "^15.0.0",
